--- a/templates/price.html
+++ b/templates/price.html
@@ -1,33 +1,42 @@
 {% extends 'index.html' %}
 
 {% block body %}
-<h2> Items in Amazon</h2>
+<div class="w3-card-4">
+     <div class="w3-panel w3-blue">
+        <h2> Items in Amazon</h2>
+    </div>
 
-{% if amazon|length > 0 %}
-<ul>
-    {% for item in amazon %}
+    {% if amazon|length > 0 %}
+    <ul class="w3-ul">
+        {% for item in amazon %}
 
-    <li>{{item[0]}} {{item[1]}}</li>
-    {% endfor %}
-</ul>
+        <li>{{item[0]}} {{item[1]}}</li>
+        {% endfor %}
+    </ul>
+<br>
 To visit Amazon click <a href={{amazon_url}} target="_blank">here</a>.
 {% else %}
     Sorry, we couldn't find any items in Amazon.
 {% endif %}
+</div>
 
+<br>
+<div class="w3-card-4">
+    <div class="w3-panel w3-blue">
+        <h2> Items in Flipkart</h2>
+    </div>
 
-<h2> Items in Flipkart</h2>
+    {% if flipkart|length > 0 %}
+    <ul class="w3-ul">
+        {% for item in flipkart %}
 
-{% if flipkart|length > 0 %}
-<ul>
-    {% for item in flipkart %}
+        <li>{{item[0]}} {{item[1]}}</li>
+        {% endfor %}
+    </ul><br>
+    To visit Flipkart click <a href={{flipkart_url}} target="_blank">here</a>.
+    {% else %}
+        Sorry, we couldn't find any items in Amazon.
+    {% endif %}
 
-    <li>{{item[0]}} {{item[1]}}</li>
-    {% endfor %}
-</ul>
-To visit Flipkart click <a href={{flipkart_url}} target="_blank">here</a>.
-{% else %}
-    Sorry, we couldn't find any items in Amazon.
-{% endif %}
-
-{% endblock %}
+    {% endblock %}
+</div>
