Updating index.html to remove the local w3.css file

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
         <title>Scrappy101</title>
 
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'w3.css') }}">
+        <link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}">
 
 
